--- a/UserManagement/.project
+++ b/UserManagement/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>webTest</name>
+	<name>UserManagement</name>
 	<comment></comment>
 	<projects>
 	</projects>
